CloudFormation/bastion_host.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Deploy a Bastion Host in a Public Subnet

Resources:
  BastionSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Bastion host security group
      VpcId: vpc-01592e0f2ba1ffbd0  # Replace with your VPC ID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 10.0.0.0/16  # Allow SSH from anywhere (for testing purposes; restrict in production)

  InternetGateway:
    Type: AWS::EC2::InternetGateway

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: vpc-01592e0f2ba1ffbd0  # Replace with your VPC ID
      InternetGatewayId: !Ref InternetGateway

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: vpc-01592e0f2ba1ffbd0  # Replace with your VPC ID

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: vpc-01592e0f2ba1ffbd0  # Replace with your VPC ID
      CidrBlock: 10.0.3.0/24  # Define the CIDR block for the public subnet
      MapPublicIpOnLaunch: true
      AvailabilityZone: ap-southeast-2a  # Replace with your desired availability zone

  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref PublicRouteTable

  BastionInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      ImageId: ami-0025ae4a1c38f6944  # ubuntu-2404-standard-1746775846
      KeyName: EKS_Xgboost  # Replace with your key pair name
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          SubnetId: !Ref PublicSubnet
          DeviceIndex: 0
          GroupSet:
            - Ref: BastionSecurityGroup
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          yum install -y aws-cli
          curl -o kubectl https://amazon-eks.s3.us-west-2.amazonaws.com/1.21.14/2022-06-29/bin/linux/amd64/kubectl
          chmod +x ./kubectl
          mv ./kubectl /usr/local/bin

Outputs:
  BastionPublicIP:
    Description: Public IP of the Bastion Host
    Value: !GetAtt BastionInstance.PublicIp
